# rust_console_project_template

./: Cargo.toml  LICENSE  README.md  dockerfile  settings.yaml
domain/: Cargo.toml
domain/src/: domains.rs  domains_impl.rs  lib.rs
domain/src/domains/: settings.rs  todo_api_client.rs
domain/src/domains_impl/: settings_impl.rs  todo_api_client_impl.rs
domain_handler/: Cargo.toml
domain_handler/src/: domain_handler.rs  domain_handler_impl.rs  lib.rs
repository/: Cargo.toml
repository/src/: lib.rs  repositories.rs  repository_handler.rs  repository_handler_impl.rs
repository/src/repositories/: todo_repository.rs
repository/src/repositories_impls/: todo_repository_impl.rs
repository_handler/: Cargo.toml
repository_handler/src/: lib.rs  repository_handler.rs  repository_handler_impl.rs
ui/: Cargo.toml
ui/src/: lib.rs  main.rs
usecase/: Cargo.toml
usecase/src/: lib.rs
usecase/src/usecases/: add_todo_usecase.rs  delete_todo_usecase.rs  get_todo_list_usecase.rs  update_todo_usecase.rs
usecase/src/usecases_impls/: add_todo_usecase_impl.rs  delete_todo_usecase_impl.rs  get_todo_list_usecase_impl.rs  update_todo_usecase_impl.rs
usecase_handler/: Cargo.toml
usecase_handler/src/: lib.rs  usecase_handler.rs  usecase_handler_impl.rs
util/: Cargo.toml
util/src/: error.rs  lib.rs
util/src/data/: todo.rs
