[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[features]
mock = ["mockall", "mockall_double"]

[dependencies]
util = {path = "../util"}
reqwest = "0.11.14"
serde_json = "1.0.132"
serde = {version = "1.0.214", features = ["derive"]}
serde_yml = "0.0.12"
yaml-rust2 = "0.9"
log = {version = "0.4.22", features = ["std", "serde"]}
futures = "0.3.31"
mockall = {version = "0.13.1", optional = true}
mockall_double = {version = "0.3.1", optional = true}
cfg-if = "1.0.0"