[package]
name = "domain_handler"
version = "0.1.0"
edition = "2021"

[features]
mock = []

[dependencies]
util = {path = "../util"}
domain = {path = "../domain"}
reqwest = "0.11.14"
serde_json = "1.0.132"
serde = {version = "1.0.214", features = ["derive"]}
log = {version = "0.4.22", features = ["std", "serde"]}
futures = "0.3.31"
cfg-if = "1.0.0"

[dev-dependencies]
domain = {path = "../domain", features = ["mock"]}