[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[features]
mock = ["mockall", "mockall_double"]

[dependencies]
util = {path = "../util"}
domain = {path = "../domain"}
domain_handler = {path = "../domain_handler"}
mockall = {version = "0.13.1", optional = true}
mockall_double = {version = "0.3.1", optional = true}
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fake = "3.0.1"
domain = {path = "../domain", features = ["mock"]}
domain_handler = {path = "../domain_handler", features = ["mock"]}