[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

[features]
mock = []

[dependencies]
util = {path = "../util"}
repository = {path = "../repository"}
repository_handler = {path = "../repository_handler"}
mockall = {version = "0.13.1"}
mockall_double = {version = "0.3.1"}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = {version = "1.41.1", features = ["full"]}
repository = {path = "../repository", features = ["mock"]}
repository_handler = {path = "../repository_handler", features = ["mock"]}