[package]
name = "usecase_handler"
version = "0.1.0"
edition = "2021"

[features]
mock = []

[dependencies]
usecase= {path = "../usecase"}
repository_handler = {path = "../repository_handler"}

[dev-dependencies]
usecase= {path = "../usecase", features = ["mock"]}
repository_handler = {path = "../repository_handler", features = ["mock"]}